# lightweight_json

./: CMakeLists.txt  README.md
include/: lightweight_json.h
src/: lightweight_json.c  lightweight_json_test.cpp  testprog.c
